--- a/index.html
+++ b/index.html
@@ -7,25 +7,25 @@
     <title>Jordan Lopez</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
     <script src="https://kit.fontawesome.com/09879d175b.js" crossorigin="anonymous"></script>
-    <link href="https://fonts.googleapis.com/css?family=Playfair+Display+SC|Roboto|Roboto+Mono&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Playfair+Display+SC%7CRoboto%7CRoboto+Mono&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
         <div id="logo">
-            <img src='assets/Molosan-Logo.png'>
+            <img alt="Logo from Jordan Lopez" src='assets/Molosan-Logo.png'>
         </div>
         <div id="name">
             <p>Jordan Lopez</p>
         </div>
     </header>
-    <nav role="navigation">
+    <nav>
         <button id="nav-about-me" class="nav-button">About Me</button>
         <button id="nav-portfolio" class="nav-button">Portfolio</button>
         <button id="nav-contact" class="nav-button">Contact</button>
     </nav>
-    <main role="main">
+    <main>
         <section id="about-me">
-            <h2>About me</h2>
+            <h1>About me</h1>
             <hr class="header-line">
             <div class="content">
                 <p>
@@ -42,7 +42,7 @@
             </div>
         </section>
         <section id="portfolio">
-            <h2>Portfolio</h2>
+            <h1>Portfolio</h1>
             <hr class="header-line">
             <ul>
                 <li>
@@ -81,7 +81,7 @@
             </ul>
         </section>
     </main>
-    <footer role="content-info">
+    <footer role="contentinfo">
         <section id="content-info">
             <a href = "mailto: jordanlopez992@gmail.com"><i class="far fa-envelope fa-2x"></i></a>
             <a href = "https://github.com/jordanlope"><i class="fab fa-github fa-2x"></i></a>
