--- a/index.html
+++ b/index.html
@@ -81,9 +81,10 @@
             </ul>
         </section>
     </main>
-    <footer role="contentinfo">
+    <footer>
         <section id="content-info">
-            <a href = "mailto: jordanlopez992@gmail.com"><i class="far fa-envelope fa-2x"></i></a>
+            <h2>Contact</h2>
+            <a href = "mailto:jordanlopez992@gmail.com"><i class="far fa-envelope fa-2x"></i></a>
             <a href = "https://github.com/jordanlope"><i class="fab fa-github fa-2x"></i></a>
             <a href = "https://www.linkedin.com/in/jordan-lopez-28538019a/"><i class="fab fa-linkedin fa-2x"></i></a>
         </section>
