--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
                 </p>
                 <hr>
                 <p>
+                    I have interned at places like Comcast, West Chester University, and small startups. I truly enjoy working in any workplace big or small.
+                </p>
+                <hr>
+                <p>
                     When I am not coding, I enjoy reading books, philosophy, watching Tom and Jerry, and spending time with Family and Friends. 
                 </p>
             </div>
@@ -62,9 +66,9 @@
                     <p class="portfolio-text">
                         Description: This is a web quiz that allows users to learn cool Presidents facts that are great for conversation starters.
                         <br><br>
-                        Techology used: HTML, CSS, JQuery
+                        Techology used: HTML, CSS, jQuery
                     </p>
-                    <button class='portfolio-button' onclick="location.href='https://github.com/jordanlope/QuizApp'" type="button">Github</button>
+                    <button class='portfolio-button' onclick="location.href='https://github.com/jordanlope/QuizApp'" type="button">GitHub</button>
                     <button class='portfolio-button' onclick="location.href='https://jordanlope.github.io/QuizApp/'" type="button">Live Page</button>
                 </li>
                 <li>
@@ -84,9 +88,9 @@
     <footer>
         <section id="content-info">
             <h2>Contact</h2>
-            <a href = "mailto:jordanlopez992@gmail.com"><i class="far fa-envelope fa-2x"></i></a>
-            <a href = "https://github.com/jordanlope"><i class="fab fa-github fa-2x"></i></a>
-            <a href = "https://www.linkedin.com/in/jordan-lopez-28538019a/"><i class="fab fa-linkedin fa-2x"></i></a>
+            <a aria-label="Email" href = "mailto:jordanlopez992@gmail.com"><i class="far fa-envelope fa-2x"></i></a>
+            <a aria-label="GitHub" href = "https://github.com/jordanlope"><i class="fab fa-github fa-2x"></i></a>
+            <a aria-label="LinkedIn" href = "https://www.linkedin.com/in/jordan-lopez-28538019a/"><i class="fab fa-linkedin fa-2x"></i></a>
         </section>
     </footer>
     <script src="index.js"></script>
