--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
                         <br><br>
                         Techology used: Flutter, Firebase, Google Map API, Facebook API
                     </p>
-                    <button class='portfolio-button' onclick="location.href='https://apps.apple.com/us/app/localized-app/id1475520885'" type="button">Apple Store</button>
-                    <button class='portfolio-button' onclick="location.href='https://play.google.com/store/apps/details?id=com.LBN.localizedapp'" type="button">Google Play Store</button>
+                    <a class='portfolio-button' onclick="location.href='https://apps.apple.com/us/app/localized-app/id1475520885'" type="button">Apple Store</a>
+                    <a class='portfolio-button' onclick="location.href='https://play.google.com/store/apps/details?id=com.LBN.localizedapp'" type="button">Google Play Store</a>
                 </li>
                 <li>
                     <h2 class="portfolio-head-text">Presidents Quiz</h2>
@@ -68,8 +68,8 @@
                         <br><br>
                         Techology used: HTML, CSS, jQuery
                     </p>
-                    <button class='portfolio-button' onclick="location.href='https://github.com/jordanlope/QuizApp'" type="button">GitHub</button>
-                    <button class='portfolio-button' onclick="location.href='https://jordanlope.github.io/QuizApp/'" type="button">Live Page</button>
+                    <a class='portfolio-button' onclick="location.href='https://github.com/jordanlope/QuizApp'" type="button">GitHub</a>
+                    <a class='portfolio-button' onclick="location.href='https://jordanlope.github.io/QuizApp/'" type="button">Live Page</a>
                 </li>
                 <li>
                     <h2 class="portfolio-head-text">Localized 4 Business</h2>
@@ -79,8 +79,8 @@
                         <br><br>
                         Techology used: Flutter, Firebase, Facebook API
                     </p>
-                    <button class='portfolio-button' onclick="location.href='https://apps.apple.com/cz/app/localized4business/id1475521133'" type="button">Apple Store</button>
-                    <button class='portfolio-button' onclick="location.href='https://play.google.com/store/apps/details?id=com.LBN.localized4business'" type="button">Google Play Store</button>
+                    <a class='portfolio-button' onclick="location.href='https://apps.apple.com/cz/app/localized4business/id1475521133'" type="button">Apple Store</a>
+                    <a class='portfolio-button' onclick="location.href='https://play.google.com/store/apps/details?id=com.LBN.localized4business'" type="button">Google Play Store</a>
                 </li>
             </ul>
         </section>
