--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </nav>
     <main>
         <section id="about-me">
-            <h1>About me</h1>
+            <h1>About Me</h1>
             <hr class="header-line">
             <div class="content">
                 <p>
