--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         </div>
     </header>
     <nav>
-        <button id="nav-about-me" class="nav-button">About Me</button>
-        <button id="nav-portfolio" class="nav-button">Portfolio</button>
-        <button id="nav-contact" class="nav-button">Contact</button>
+        <a id="nav-about-me" class="nav-button">About Me</a>
+        <a id="nav-portfolio" class="nav-button">Portfolio</a>
+        <a id="nav-contact" class="nav-button">Contact</a>
     </nav>
     <main>
         <section id="about-me">
