--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </div>
         </section>
         <section id="portfolio">
-            <h1>Portfolio</h1>
+            <h1 id='portfolio-header'>Portfolio</h1>
             <hr class="header-line">
             <ul>
                 <li>
